Fix scrollbars on tournament name on tournaments page

--- a/src/views/TournamentList/TournamentList.css
+++ b/src/views/TournamentList/TournamentList.css
@@ -99,6 +99,7 @@
         display: inline-flex;
         align-items: center;
         align-content: center;
+        overflow: hidden;
 
         img {
             padding-right: 0.5rem;
